# solomon_attendance_automation

./: .env.sample  .gitignore  README.md  attendance.py  day.py  main.js  main.py  package.json  pyproject.toml  requirements.txt
